--- a/client/components/layout/footer/footer.html
+++ b/client/components/layout/footer/footer.html
@@ -9,7 +9,7 @@
         <span class="copyright">&copy; 2015 Rented, Inc.</span>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-        <a ui-sref="terms">Terms and Conditions</a> |
+        <a ui-sref="terms" href="privacy.html#TopPrivacy">Terms and Conditions</a> |
         <a ui-sref="privacy">Privacy policy </a> |
         <a href="mailto:feedback@campusly.org?=Website%20Feedback" target="_top">Contact us</a>
       </div>
