adding form validators to edit university, adding css class for errors

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -54,6 +54,12 @@
 Rented's custom styles
 ========================================================================== */
 
+/* ==========================================================================
+education form's custom styles
+========================================================================== */
+.educationError{
+  border-left: solid red 5px;
+}
 
 /* ==========================================================================
 Proxima Nova custom font - to be used for the whole website
