Updated team page, removed graduation dates

--- a/client/components/layout/footer/about.html
+++ b/client/components/layout/footer/about.html
@@ -65,7 +65,7 @@
             <ul style="list-style: none">
               <li><br></li>
               <li>Vinit Modi</li>
-              <li>UCSD, 2005</li>
+              <li>UCSD</li>
             </ul>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
@@ -73,8 +73,7 @@
             <ul style="list-style: none">
               <li><br></li>
               <li>Joel Rosenberg</li>
-              <li>UCSB, 1980</li>
-              <li>SCU, 1986</li>
+              <li>UCSB and SCU</li>
             </ul>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
@@ -82,7 +81,7 @@
             <ul style="list-style: none">
               <li><br></li>
               <li>Kristen Llyod</li>
-              <li>UCSD, 2015</li>
+              <li>UCSD</li>
             </ul>
           </div>
         </div>
@@ -93,7 +92,7 @@
             <ul style="list-style: none">
               <li><br></li>
               <li>Michelle Chen</li>
-              <li>SJSU, 2015</li>
+              <li>SJSU</li>
             </ul>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
@@ -101,7 +100,7 @@
             <ul style="list-style: none">
               <li><br></li>
               <li>Tawan Suttamitr</li>
-              <li>SJSU, 2015</li>
+              <li>SJSU</li>
             </ul>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
@@ -109,7 +108,7 @@
             <ul style="list-style: none">
               <li><br></li>
               <li>Francisco Sandoval</li>
-              <li>UCSD, 2015</li>
+              <li>UCSD</li>
             </ul>
           </div>
         </div>
@@ -120,7 +119,7 @@
             <ul style="list-style: none">
               <li><br></li>
               <li>Kevin Guibara</li>
-              <li>UCB, 2015</li>
+              <li>UCB</li>
             </ul>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
@@ -128,7 +127,7 @@
             <ul style="list-style: none">
               <li><br></li>
               <li>Per John Thorenfeldt</li>
-              <li>Donski Vgs, 1983</li>
+              <li>Donski Vgs, Norway</li>
             </ul>
           </div>
         </div>
