--- a/client/components/layout/footer/about.html
+++ b/client/components/layout/footer/about.html
@@ -104,7 +104,7 @@
             </ul>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <i class="fa fa-diamond fa-5x"></i>
+            <img class="circular" src="./../../../assets/images/team/cisco.jpg" style="width: 40%">
             <ul style="list-style: none">
               <li><br></li>
               <li>Francisco Sandoval</li>
