--- a/client/components/layout/footer/about.html
+++ b/client/components/layout/footer/about.html
@@ -51,7 +51,7 @@
 
         <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <p style="padding-bottom: 20px">
-            We started the company in May 2014 to help renters find housing (hence the name Rented). Over time we found that we can do much more! <br>
+            We started the company in May 2014 to help renters find housing. Over time we found that we can do much more! <br>
             After talking to many students, property owners, property managers, and universities we discovered that off-campus housing plays a critical role in student success.
             Let's give back and build a strong foundation for the future together!
           </p>
