--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -10,6 +10,7 @@
       <p class="brand-text">secure off-campus community</p>
     </div>
 
+      <div class="fb-send" ng-class="{'FBNavbarLoggedOut' : !isLoggedIn(), 'FBNavbarLoggedIn':isLoggedIn()}" data-colorscheme="light" fb-like="'https://campusly.org/'"></div>
     <div class="right-content" ng-show="isLoggedIn()">
       <img class="img-circle profile-image" ng-if="getCurrentUser().profileImage" ng-src="/api/images{{getCurrentUser().profileImage}}">
       <i ng-if="!getCurrentUser().profileImage" class="fa fa-user fa-2x greetings" style="vertical-align: middle; "></i>
