--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -18,10 +18,10 @@
       <a class="new-bubble" ui-sref-active="active" ui-sref="logout"><i class="fa fa-sign-out"></i></a>
     </div>
 
-    <div class="right-content">
-      <div class="fb-send" data-colorscheme="light" fb-like="'https://campusly.org/'"></div>
-      <a ui-sref-active="active" ng-show="!isLoggedIn()" ui-sref="login" ui-sref-opts="{reload:true, notify:true}" class="link sign-in">Sign In</a>
-      <a ui-sref-active="active" ng-show="!isLoggedIn()" ui-sref="signup" ui-sref-opts="{reload:true, notify:true}" class="btn sign-up">Sign up for free</a>
+    <div class="right-content" ng-show="!isLoggedIn()">
+      <div class="fb-send safariFix" data-colorscheme="light" fb-like="'https://campusly.org/'"></div>
+      <a ui-sref-active="active" ui-sref="login" ui-sref-opts="{reload:true, notify:true}" class="link sign-in">Sign In</a>
+      <a ui-sref-active="active" ui-sref="signup" ui-sref-opts="{reload:true, notify:true}" class="btn sign-up">Sign up for free</a>
     </div>
   </div>
 
