fixing fb buttons

--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -9,9 +9,8 @@
       </a>
       <p class="brand-text">secure off-campus community</p>
     </div>
-
     <div class="right-content" ng-show="isLoggedIn()">
-      <div class="fb-send" data-colorscheme="light" fb-like="'https://campusly.org/'"></div>
+      <div class="fb-send" data-colorscheme="light" fb-like="'https://www.facebook.com/campusly'"></div>
       <img class="img-circle profile-image" ng-if="getCurrentUser().profileImage" ng-src="/api/images{{getCurrentUser().profileImage}}">
       <i ng-if="!getCurrentUser().profileImage" class="fa fa-user fa-2x greetings" style="vertical-align: middle; "></i>
       <p class="greetings">&nbsp;{{getCurrentUser().firstname}}</p>
@@ -19,7 +18,7 @@
     </div>
 
     <div class="right-content" ng-show="!isLoggedIn()">
-      <div class="fb-send safariFix" data-colorscheme="light" fb-like="'https://campusly.org/'"></div>
+      <div class="fb-send safariFix" data-colorscheme="light" fb-like="'https://www.facebook.com/campusly'"></div>
       <a ui-sref-active="active" ui-sref="login" ui-sref-opts="{reload:true, notify:true}" class="link sign-in">Sign In</a>
       <a ui-sref-active="active" ui-sref="signup" ui-sref-opts="{reload:true, notify:true}" class="btn sign-up">Sign up for free</a>
     </div>
