adding form css when posting new room

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -59,6 +59,7 @@ education form's custom styles
 ========================================================================== */
 .educationError{
   border-left: solid red 5px;
+  border-bottom: solid red 1px;
 }
 
 /* ==========================================================================
