finishing email update

--- a/server/components/mail/user_update/style.ejs
+++ b/server/components/mail/user_update/style.ejs
@@ -137,7 +137,10 @@ table.row td.last,
 table.container td.last {
 padding-right: 0px;
 }
-
+tr.spaceUnder > td
+{
+padding-bottom: 7px;
+}
 table.one { width: 30px; }
 table.two { width: 80px; }
 table.three { width: 130px; }
