addig room description to update email

--- a/server/components/mail/user_update/html.ejs
+++ b/server/components/mail/user_update/html.ejs
@@ -93,6 +93,7 @@
                                         Price: ${{= roomListings[i].monthlyPrice }}<br/>
                                         Room type: {{= roomListings[i].roomType }}<br/>
                                         Shared bathroom: {{= roomListings[i].sharedBathroom }}<br/></a></td></tr>
+                            <tr><td colspan="2">Room description: {{= roomListings[i].description }}</td></tr>
                                   <hr/>
                                 {{ } }}
                           </table>
