--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1509,6 +1509,10 @@ Post padding
   padding-top: 15px;
 }
 
+.borderRadiusFix {
+  border-radius: 50px;
+}
+
 .looking-for-room img.profile-image{
   height: 5em;
   width: 5em;
