fixing looking picture size issue and inputs round edges

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -2052,6 +2052,8 @@ Looking Details
 
 .looking-grid-profile-img {
   width: 29%;
+  max-width: 5em;
+  max-height: 4em;
 }
 
 /* My profile - roommates */
