--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -10,7 +10,7 @@
       <p class="brand-text">secure off-campus community</p>
     </div>
     <div class="right-content" ng-show="isLoggedIn()">
-      <div class="fb-send" data-colorscheme="light" fb-like="'https://www.facebook.com/campusly'"></div>
+      <div class="fb-send" data-colorscheme="light" fb-like="'https://www.facebook.com/campusly'" ng-if="loadFB"></div>
       <img class="img-circle profile-image" ng-if="getCurrentUser().profileImage" ng-src="/api/images{{getCurrentUser().profileImage}}">
       <i ng-if="!getCurrentUser().profileImage" class="fa fa-user fa-2x greetings" style="vertical-align: middle; "></i>
       <p class="greetings">&nbsp;{{getCurrentUser().firstname}}</p>
