--- a/client/components/layout/navbar/navbar.css
+++ b/client/components/layout/navbar/navbar.css
@@ -28,3 +28,15 @@ header.navbar-wrapper .navbar {
 header.picture{
   background-image: url(./../../../assets/images/jumbotron/nav.jpg);
 }
+.facebookNavbar {
+  color: #3b5998;
+  font-size: 0.8em;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.facebookNavbarIcon {
+  color: #3b5998;
+  font-size: 1.6em;
+  cursor: pointer;
+}
