--- a/server/components/mail/user_update/html.ejs
+++ b/server/components/mail/user_update/html.ejs
@@ -104,6 +104,7 @@
                 </tr>
               </table>
 
+              <a href="https://campusly.org/editProfile">Unsubscribe from receiving daily update e-mail</a>
 
               <table class="row">
                 <tr>
