Reverting campus name from daily email code

--- a/server/components/mail/user_update/html.ejs
+++ b/server/components/mail/user_update/html.ejs
@@ -60,7 +60,8 @@
                               <tr>
                                   <td>
                                       <a href="https://campusly.org/lookingDetail/{{=lookings[i].id}}">
-                                      Campus: {{= lookings[i].relatedUserId.usereducationUsers[0].relatedUniversityId.name }}<br/>
+                                      <!-- TODO correct campus binding -->
+                                      <!--Campus: {{= lookings[i].relatedUserId.usereducationUsers[0].relatedUniversityId.name }}<br/>-->
                                       Move in date: {{= lookings[i].moveInDate.getMonth()+1 }}/{{= lookings[i].moveInDate.getDate() }}/{{= lookings[i].moveInDate.getFullYear() }}<br/>
                                       Max rent: ${{= lookings[i].maxMonthlyRent }}<br/>
                                       Gender: {{= lookings[i].gender }}<br/>
