--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1940,15 +1940,16 @@ Looking Details
 }
 
 .flip-container {
-  perspective: 1000;
-  -webkit-perspective: 1000;
-  -ms-perspective: 1000;
+  perspective: 1000px;
+  -webkit-perspective: 1000px;
 }
 /* flip the pane when hovered */
 .flip-container:hover .flipper, .flip-container.hover .flipper {
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
   -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg)
 }
 
 .flip-container, .front, .back {
@@ -1964,25 +1965,26 @@ Looking Details
 }
 
 .flip-container-room {
-  perspective: 1000;
-  -webkit-perspective: 1000;
-  -ms-perspective: 1000;
+  perspective: 1000px;
+  -webkit-perspective: 1000px;
 }
 /* flip the pane when hovered */
 .flip-container-room:hover .flipper, .flip-container-room.hover .flipper {
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
   -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg)
 }
 
 /* flip speed goes here */
 .flipper {
-  transition: 0.6s;
+  -moz-transition: 0.6s;
+  -o-transition: 0.6s;
   -webkit-transition: 0.6s;
-  -ms-transition: 0.6s;
+  transition: 0.6s
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
 
   position: relative;
 }
@@ -1991,13 +1993,11 @@ Looking Details
 .front {
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
 }
 
 .back {
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
 
   position: absolute;
   top: 0;
@@ -2007,9 +2007,8 @@ Looking Details
 .front {
   width: 100%;
   border-radius: 5px;
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
   display: table;
   z-index: 2;
   transform: rotateY(0deg);
