fixed daily update disfunction, adding campus to temaplate, adding recipient firstname in template

--- a/server/components/mail/user_update/html.ejs
+++ b/server/components/mail/user_update/html.ejs
@@ -50,11 +50,8 @@
 
                     <!--begin looking section-->
                     {{ if (lookings.length > 0) { }}
-                      <h2>Connect with {{=lookings.length}} new students who are looking for a room or roommate!</h2>
+                      <h2>Dear *|FNAME|*, connect with {{=lookings.length}} new students who are looking for a room or roommate!</h2>
                         <table class="twelve columns">
-
-
-
 
                             {{ for(var i=0; i<lookings.length; i++) {}}
                               <tr>
