--- a/server/components/mail/user_update/html.ejs
+++ b/server/components/mail/user_update/html.ejs
@@ -57,8 +57,7 @@
                               <tr>
                                   <td>
                                       <a href="https://campusly.org/lookingDetail/{{=lookings[i].id}}">
-                                      <!-- TODO correct campus binding -->
-                                      <!--Campus: {{= lookings[i].relatedUserId.usereducationUsers[0].relatedUniversityId.name }}<br/>-->
+                                      Campus: {{= lookings[i].relatedUserId.usereducationUsers[0].relatedUniversityId.name }}<br/>
                                       Move in date: {{= lookings[i].moveInDate.getMonth()+1 }}/{{= lookings[i].moveInDate.getDate() }}/{{= lookings[i].moveInDate.getFullYear() }}<br/>
                                       Max rent: ${{= lookings[i].maxMonthlyRent }}<br/>
                                       Gender: {{= lookings[i].gender }}<br/>
@@ -70,14 +69,11 @@
                                 <hr/>
                             {{ } }}
 
-                            <!--<td class="expander"></td>-->
-
                         </table>
                     {{ } }}
                         <!--end looking section-->
 
                     <!--begin room listing section-->
-
 
                       {{ if (roomListings.length > 0) { }}
                       <h2>Check out {{=roomListings.length}} new rooms available!</h2>
